--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <meta name="description" content="Book train tickets across India with RailBook. Search trains, check availability, and book instantly with secure payments." />
     <meta name="author" content="RailBook" />
 
-    <meta property="og:title" content="RailBook - Indian Railway Reservation System" />
+    <!-- <meta property="og:title" content="RailBook - Indian Railway Reservation System" />
     <meta property="og:description" content="Book train tickets across India with RailBook. Search trains, check availability, and book instantly." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
   </head>
 
   <body>
