--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <!-- <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RailBook - Indian Railway Reservation System</title>
     <meta name="description" content="Book train tickets across India with RailBook. Search trains, check availability, and book instantly with secure payments." />
-    <meta name="author" content="RailBook" />
+    <meta name="author" content="RailBook" /> -->
 
     <!-- <meta property="og:title" content="RailBook - Indian Railway Reservation System" />
     <meta property="og:description" content="Book train tickets across India with RailBook. Search trains, check availability, and book instantly." />
